<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFF9E6"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

                <!-- Shared header -->
                <include
                    android:id="@+id/headerContainer"
                    layout="@layout/shared_header" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to_wellnessdiet"
                    android:textSize="20sp"
                    android:padding="8dp" />

                <!-- Shared form inputs -->
                <include
                    android:id="@+id/formInputsContainer"
                    layout="@layout/shared_form_inputs" />

                <EditText
                    android:id="@+id/editAge"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:layout_marginStart="16dp" />
                </RadioGroup>

                <TextView
                    android:id="@+id/spinnerActivityText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:paddingTop="8dp"
                    android:text="@string/you_activity_level"/>

                <Spinner
                    android:id="@+id/spinnerActivity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnCalcBMIANDBMR"
                    android:text="@string/calculate_bmi_and_bmr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#388E3C"/>

                <TextView
                    android:id="@+id/resultBMI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCCCCC"
                    android:layout_marginVertical="10dp" />
                <TextView
                    android:id="@+id/resultBMR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCCCCC"
                    android:layout_marginVertical="10dp" />

                <Button
                    android:id="@+id/btnCalcCalories"
                    android:text="@string/estimate_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FB8C00"/>

                <TextView
                    android:id="@+id/resultCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:paddingTop="8dp"/>
        </LinearLayout>
</ScrollView>